--- a/createAccount/createAccount.css
+++ b/createAccount/createAccount.css
@@ -3,5 +3,5 @@
 
 body {
     background: linear-gradient(0deg,#9A989A 80%,#A32638 20%);
-    background-attachment: scroll;
+    background-attachment: static;
 }
