--- a/post/post.css
+++ b/post/post.css
@@ -3,7 +3,7 @@
 
 body {
     background: linear-gradient(0deg,#9A989A 80%,#A32638 20%);
-    background-attachment: scroll;
+    background-attachment: static;
 }
 
 ul {
