--- a/newPost/newPost.css
+++ b/newPost/newPost.css
@@ -2,8 +2,9 @@
 *{font-family: Arial, Helvetica, sans-serif}
 
 body {
-    background: linear-gradient(0deg,#9A989A 80%,#A32638 20%);
+    background: linear-gradient(0deg, #9A989A 80%, #A32638 20%);
     background-attachment: static;
+    background-repeat: no-repeat;
 }
 
 ul {
