Testing database insertion

--- a/createAccount/createAccount.css
+++ b/createAccount/createAccount.css
@@ -3,6 +3,8 @@
 
 body {
     background: linear-gradient(0deg,#9A989A 80%,#A32638 20%);
-    background-attachment: static;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
+    margin: 0;
 }
