--- a/index.css
+++ b/index.css
@@ -3,7 +3,10 @@
 
 body {
     background: linear-gradient(0deg,#9A989A 80%,#A32638 20%);
-    background-attachment: static;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
+    margin: 0;
 }
 
 h1 {
