--- a/profile/profile.css
+++ b/profile/profile.css
@@ -4,9 +4,10 @@
 /*Might have to take out the red section of the gradiant since the site page selector is red*/
 body {
     background: linear-gradient(0deg,#9A989A 80%,#A32638 20%);
-    background-attachment: static;
     background-repeat: no-repeat;
-    
+    background-attachment: fixed;
+    height: 100%;
+    margin: 0;
 }
 
 ul {
