--- a/profile/profile.css
+++ b/profile/profile.css
@@ -3,7 +3,7 @@
 
 /*Might have to take out the red section of the gradiant since the site page selector is red*/
 body {
-    background: linear-gradient(0deg,#9A989A 80%,#A32638 20%);
+    background: linear-gradient(0deg,#F5F1E4  80%,#A32638 20%);
     background-repeat: no-repeat;
     background-attachment: fixed;
     height: 100%;
@@ -36,7 +36,7 @@ li a:hover {
 }
 
 .active {
-    background-color: #9A989A;
+    background-color: #F5F1E4 ;
     /*was #4CAF50 (green)*/
 }
 
