--- a/createAccount/createAccount.css
+++ b/createAccount/createAccount.css
@@ -2,9 +2,23 @@
 *{font-family: Arial, Helvetica, sans-serif}
 
 body {
-    background: linear-gradient(0deg,#F5F1E4  80%,#A32638 20%);
+    background: linear-gradient(0deg,#F5F1E4 80%,#A32638 20%);
     background-repeat: no-repeat;
     background-attachment: fixed;
     height: 100%;
     margin: 0;
+}
+
+h2 {
+    text-align: center;
+    color: white;
+}
+
+.create {
+    margin-left: auto; margin-right:auto;
+    border: 1px solid black;
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    text-align: center;
 }
