--- a/index.css
+++ b/index.css
@@ -10,11 +10,13 @@ body {
 }
 
 h1 {
-    text-align: center
+    text-align: center;
+    color: white;
 }
 
 h2 {
-    text-align: center
+    text-align: center;
+    color: white;
 }
 
 .login {
