--- a/connections/connections.css
+++ b/connections/connections.css
@@ -37,3 +37,12 @@ li a:hover {
 .active {
     background-color: #690312 ;
 }
+
+.content {
+    margin-left: auto; margin-right:auto;
+    border: 1px solid black;
+    background-color: white;
+    width: 300px;
+    height: 500px;
+    text-align: center;
+}
