--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -41,3 +41,12 @@ li a:hover {
 h1{
     text-align: center;
 }
+
+#postDisplay {
+    margin-left: auto; margin-right:auto;
+    border: 1px solid black;
+    background-color: white;
+    width: 300px;
+    height: 500px;
+    text-align: center;
+}
