--- a/profile/profile.css
+++ b/profile/profile.css
@@ -84,3 +84,12 @@ hr{
     border-top: 5px solid black;
     margin: 2em 0;
 }
+
+.content {
+    margin-left: auto; margin-right:auto;
+    border: 1px solid black;
+    background-color: white;
+    width: 300px;
+    height: 500px;
+    text-align: center;
+}
