--- a/connections/connections.css
+++ b/connections/connections.css
@@ -43,6 +43,6 @@ li a:hover {
     border: 1px solid black;
     background-color: white;
     width: 300px;
-    height: 500px;
+    height: auto;
     text-align: center;
 }
