--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -46,7 +46,7 @@ h1{
     margin-left: auto; margin-right:auto;
     border: 1px solid black;
     background-color: white;
-    width: 300px;
-    height: 500px;
+    width: 500px;
+    height: auto;
     text-align: center;
 }
