--- a/profile/profile.css
+++ b/profile/profile.css
@@ -41,7 +41,7 @@ li a:hover {
 }
 
 h1 {
-    text-align: left;
+    text-align: center;
     font-size: 32px;
 }
 
@@ -80,6 +80,7 @@ h1 {
     font-size: 24px;
 }
 
+/*what is hr?? */
 hr{
     border-top: 5px solid black;
     margin: 2em 0;
@@ -90,6 +91,6 @@ hr{
     border: 1px solid black;
     background-color: white;
     width: 600px;
-    height: 1000px;
+    height: 900px;
     text-align: center;
 }
