--- a/createAccount/createAccount.css
+++ b/createAccount/createAccount.css
@@ -12,6 +12,8 @@ body {
 h2 {
     text-align: center;
     color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 .create {
@@ -19,6 +21,8 @@ h2 {
     border: 1px solid black;
     background-color: white;
     width: 300px;
-    height: 500px;
+    height: auto;
     text-align: center;
+    border-radius: 30px;
+    padding-bottom: 20px;
 }
