--- a/index.css
+++ b/index.css
@@ -12,11 +12,15 @@ body {
 h1 {
     text-align: center;
     color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 h2 {
     text-align: center;
     color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 .login {
@@ -26,4 +30,5 @@ h2 {
     width: 200px;
     height: 200px;
     text-align: center;
+    border-radius: 30px;
 }
