--- a/newPost/newPost.css
+++ b/newPost/newPost.css
@@ -38,11 +38,20 @@ li a:hover {
     background-color: #690312 ;
 }
 
-.content {
+h1{
+    text-align: center;
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
+form {
     margin-left: auto; margin-right:auto;
     border: 1px solid black;
     background-color: white;
     width: 600px;
-    height: 450px;
+    height: 380px;
     text-align: center;
+    padding: 20px;
+    border-radius: 30px;
 }
