--- a/profile/profile.css
+++ b/profile/profile.css
@@ -88,7 +88,7 @@ h2 {
     border: 1px solid black;
     background-color: white;
     width: 500px;
-    height: 320px;
+    height: auto;
     border-radius: 30px;
     padding: 20px;
 }
