--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -90,10 +90,13 @@ h1{
 #privacyLabel{
     text-align: center;
     color: white;
+    font-size: large;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
-input{
+.option{
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
 }
 
